feat: be able to specify the number of GPUs with metadata
